# Website-Cloning-Tool

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
frontend/src/app/: page.tsx
